Adding more comments to backward pass implementation

--- a/weather_predictorNN.ipynb
+++ b/weather_predictorNN.ipynb
@@ -615,7 +615,9 @@
     "        layers[i][0] = layers[i][0] - w_grad*learning_rate # Update weights\n",
     "        layers[i][1] = layers[i][1] - b_grad*learning_rate # Update biases\n",
     "\n",
-    "        grad = grad @ layers[i][0].T # Propogate the gradient back through the network as we update the weights\n",
+    "        grad = grad @ layers[i][0].T # Propogate the gradient back through the network as we update the weights (dL/dy_prev = dL/dy_current * dy_current/dy_prev) \n",
+    "                                     # dy_current/dy_prev = w since y = w*x + b and the output of the previous layer is the input to the current layer\n",
+    "\n",
     "    return layers"
    ]
   },
