--- a/weather_predictorRNN.ipynb
+++ b/weather_predictorRNN.ipynb
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +355,7 @@
     "    return np.mean((actual - predicted)**2)\n",
     "    \n",
     "def mse_gradient(actual, predicted):\n",
-    "    return np.mean(predicted-actual)"
+    "    return predicted-actual"
    ]
   },
   {
@@ -526,7 +526,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "layer_conf = [{\"type\": \"input\", \"units\": 3}, {\"type\": \"rnn\", \"hidden\": 4, \"output\": 1}]"
+    "layer_conf = [{\"type\": \"input\", \"units\": 3}, {\"type\": \"rnn\", \"hidden\": 4, \"output\": 1}] # Each layer is its own dictionary"
    ]
   },
   {
@@ -614,44 +614,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0 - Training Loss: [[3669.36830733]\n",
-      " [3383.8572404 ]\n",
-      " [3288.13769906]\n",
-      " [3267.07539738]\n",
-      " [3261.10716869]\n",
-      " [3259.27120256]\n",
-      " [3258.80060437]], Validation Loss: [[3205.08525107]\n",
-      " [2483.34197401]\n",
-      " [2335.85954066]\n",
-      " [2315.59821753]\n",
-      " [2309.62589298]\n",
-      " [2308.04061029]\n",
-      " [2307.82941484]]\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_14460\\2925817539.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     10\u001b[0m         \u001b[0mseq_y\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain_y\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0msequence_len\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m         \u001b[0mhiddens\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moutputs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mforward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mseq_x\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlayers\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m         \u001b[0mgrad\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmse_gradient\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mseq_y\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moutputs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m         \u001b[0mparams\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbackward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlayers\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mseq_x\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgrad\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mhiddens\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_14460\\2468457051.py\u001b[0m in \u001b[0;36mforward\u001b[1;34m(x, layers)\u001b[0m\n\u001b[0;32m     11\u001b[0m             \u001b[0mhidden_x\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtanh\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhidden_x\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m             \u001b[1;31m# Store hidden for use in backpropagation\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m             \u001b[0mhidden\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mhidden_x\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m             \u001b[1;31m# Output layer for calculating loss and backpropagation\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "Epoch 0 - Training Loss: 704.5663274969316, Validation Loss: 141.4089996415935\n",
+      "Epoch 50 - Training Loss: 42.56902666733432, Validation Loss: 50.49567322194452\n",
+      "Epoch 100 - Training Loss: 38.858522660449864, Validation Loss: 43.8771045686354\n",
+      "Epoch 150 - Training Loss: 38.3705947198066, Validation Loss: 43.103550011952954\n",
+      "Epoch 200 - Training Loss: 38.179915287404, Validation Loss: 42.81716181420354\n"
      ]
     }
    ],
    "source": [
     "epochs = 250\n",
-    "lr = 1e-5\n",
+    "lr = 1e-4\n",
     "\n",
     "layers = init_params(layer_conf)\n",
     "for epoch in range(epochs):\n",
@@ -668,7 +648,7 @@
     "\n",
     "    if epoch % 50 == 0:\n",
     "        valid_loss = 0\n",
-    "        # Loop through validation set\n",
+    "        # Loop through validation set every 50 epochs\n",
     "        for j in range(valid_x.shape[0] - sequence_len):\n",
     "            seq_x = valid_x[j:j+sequence_len]\n",
     "            seq_y = valid_y[j:j+sequence_len]\n",
