CNN architecture and training loop

--- a/APS360 Labs/Lab3/Lab_3_Gesture_Recognition Winter 2022.ipynb
+++ b/APS360 Labs/Lab3/Lab_3_Gesture_Recognition Winter 2022.ipynb
@@ -211,13 +211,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "collapsed": true,
-    "id": "WBrH5kBqRLa6"
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
@@ -226,9 +221,23 @@
     "from torch.utils.data.sampler import SubsetRandomSampler\n",
     "import torchvision\n",
     "import torchvision.transforms as transforms\n",
-    "\n",
+    "import torch.nn.functional as F\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "collapsed": true,
+    "id": "WBrH5kBqRLa6"
+   },
+   "outputs": [],
+   "source": [
     "def organize_class_indices(data, classes):\n",
-    "    '''Create dictionary containing indices of each class'''\n",
+    "    '''Create dictionary containing indice location of each class'''\n",
     "    ind_dict = dict()\n",
     "    for i in range(len(data)):\n",
     "        class_int = data[i][1]\n",
@@ -266,13 +275,12 @@
     "    test_sampler = SubsetRandomSampler(test_inds)\n",
     "    test_loader = torch.utils.data.DataLoader(data, batch_size=batch_size, num_workers=1, sampler=test_sampler)\n",
     "\n",
-    "    return train_loader, val_loader, test_loader\n",
-    "\n"
+    "    return train_loader, val_loader, test_loader"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +316,28 @@
     "id": "2dtx1z5951fS"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class CNN(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(CNN, self).__init__()\n",
+    "        # Feature maps should increase as we get deeper in the network, whereas dimension size should decrease\n",
+    "        self.name = \"cnn\"\n",
+    "        self.conv1 = nn.Conv2d(3,8,5) # Input channels: based on image type (RGB). Output channels: based on number of filters used, where each filter creates a feature map, also referred to as a channel\n",
+    "                                      # to capture different information about the image\n",
+    "        self.pool = nn.MaxPool2d(2,2) # kernel size, stride\n",
+    "        self.conv2 = nn.Conv2d(5,12,5)\n",
+    "        self.fc1 = nn.Linear(12*52,32)\n",
+    "        self.fc2 = nn.Linear(32,1)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.pool(F.relu(self.conv1(x)))\n",
+    "        x = self.pool(F.relu(self.conv2(x)))\n",
+    "        x = x.view(-1, 12*52) # Reshape tensor\n",
+    "        x = F.relu(self.fc1(x))\n",
+    "        x = self.fc2(x) # Don't want to apply activation here since we should have one result/prediction value at this point\n",
+    "        x = x.squeeze(1) # Flatten to batch size\n",
+    "        return x\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -335,7 +364,70 @@
     "id": "17YTQv4l54W1"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def evaluate(model, loader, criterion):\n",
+    "    '''Evaluate model performance on given loader set'''\n",
+    "    total_epoch = 0\n",
+    "    total_err = 0.0\n",
+    "    total_loss = 0.0\n",
+    "    for i, data in enumerate(loader):\n",
+    "        # Run current model through data and calculate loss\n",
+    "        inputs, labels = data\n",
+    "        outputs = model(inputs)\n",
+    "        loss = criterion(outputs, labels)\n",
+    "        # Count error and sum loss of model against true labels for the whole dataset\n",
+    "        corr = outputs.squeeze().long() != labels\n",
+    "        total_err += int(sum(corr))\n",
+    "        total_loss += loss.item()\n",
+    "        total_epoch += len(labels)\n",
+    "    # Calculate total error and loss among the entire dataset\n",
+    "    eval_err = total_err / total_epoch \n",
+    "    eval_loss = total_loss / (i+1)\n",
+    "\n",
+    "    return eval_err, eval_loss\n",
+    "    \n",
+    "def train_model(model, lr, epochs, train_set):\n",
+    "    '''Use training and validation sets to perform forward and backpropagation on the model'''\n",
+    "    torch.manual_seed(1000)\n",
+    "\n",
+    "    # Initialize loss/error arrays, optimizer, and loss function\n",
+    "    criterion = nn.CrossEntropyLoss() # Cross Entropy loss tends to be the best for classification problems\n",
+    "    optimizer = torch.optim.Adam(model.parameters(), lr) # Adam optimizer is faster and more efficient than regular SGD\n",
+    "    train_err = np.zeros(epochs)\n",
+    "    train_loss = np.zeros(epochs)\n",
+    "    val_err = np.zeros(epochs)\n",
+    "    val_loss = np.zeros(epochs)\n",
+    "\n",
+    "    # Training loop - iterate over training data, # of epochs times. Pytorch NN class will deal with weight adjusting as we perform back propagation and optimize\n",
+    "    start_time = time.time()\n",
+    "    for epoch in range(epochs):\n",
+    "        total_epoch = 0\n",
+    "        total_err = 0.0\n",
+    "        total_loss = 0.0\n",
+    "        for i, data in enumerate(train_set):\n",
+    "            inputs, labels = data # data loader provides [tensor, label] format. Loader is also seperated into batches based on our chosen batch size\n",
+    "            optimizer.zero_grad() # Zero gradients before starting\n",
+    "            outputs = model(inputs)\n",
+    "            loss = criterion(outputs, labels) # calculate loss\n",
+    "            loss.backward() # gradient backpropagation\n",
+    "            optimizer.step() # updating weights by descending from loss gradients\n",
+    "\n",
+    "            # Calculate error/loss from training batch step\n",
+    "            corr = outputs.squeeze().long() != labels\n",
+    "            total_err += int(sum(corr))\n",
+    "            total_loss += loss.item() # Extract loss value as float\n",
+    "            total_epoch += len(labels)\n",
+    "        train_err[epoch] = total_err / total_epoch # Average number of times model was wrong\n",
+    "        train_loss[epoch] = total_loss / (i+1) # Average loss over one iteration of training data\n",
+    "        val_err[epoch], val_loss[epoch] = evaluate(model, val_loader, criterion)\n",
+    "    \n",
+    "        # Print out epoch information regarding error and loss\n",
+    "        print((\"Epoch {}: Train err: {}, Train loss: {} |\" \"Validation err: {}, Validation loss: {}\").format(epoch + 1, train_err[epoch], train_loss[epoch], val_err[epoch], val_loss[epoch]))\n",
+    "    print('Finished Training')\n",
+    "    end_time = time.time()\n",
+    "    elapsed_time = end_time - start_time\n",
+    "    print(\"Total time elapsed: {:.2f} seconds\".format(elapsed_time))"
+   ]
   },
   {
    "cell_type": "markdown",
