Data loading and splits made

--- a/APS360 Labs/Lab4/Lab_4_Data_Imputation_Winter_2022.ipynb
+++ b/APS360 Labs/Lab4/Lab_4_Data_Imputation_Winter_2022.ipynb
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -160,7 +160,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Ethan's PC\\AppData\\Local\\Temp\\ipykernel_15844\\1831985018.py:3: ParserWarning: Length of header or names does not match length of data. This leads to a loss of data with index_col=False.\n",
+      "C:\\Users\\Ethan's PC\\AppData\\Local\\Temp\\ipykernel_9072\\1831985018.py:3: ParserWarning: Length of header or names does not match length of data. This leads to a loss of data with index_col=False.\n",
       "  df = pd.read_csv(\n"
      ]
     }
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -707,6 +707,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1843, 11)\n",
+      "5.660145572924664\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_with_missing.shape) # 1843 records (rows) contained missing features\n",
+    "perc_of_removed = df_with_missing.shape[0]/df.shape[0] * 100\n",
+    "print(perc_of_removed) # 5.6% of records were removed from the dataframe"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -720,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -730,8 +750,29 @@
      "outputs_hidden": true
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{' Federal-gov',\n",
+       " ' Local-gov',\n",
+       " ' Private',\n",
+       " ' Self-emp-inc',\n",
+       " ' Self-emp-not-inc',\n",
+       " ' State-gov',\n",
+       " ' Without-pay'}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a set of the possible values of the \"work\" feature within the dataset\n",
+    "possible_work = set(df_not_missing[\"work\"])\n",
+    "possible_work"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -749,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -761,12 +802,13 @@
    },
    "outputs": [],
    "source": [
-    "data = pd.get_dummies(df_not_missing)"
+    "data = pd.get_dummies(df_not_missing) # Expands on features to create a column for every possible value in the feature, allowing us to assign a 0 or 1 to the column\n",
+    "# Function adds the feature_<possible value> column to the dataframe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -777,7 +819,168 @@
     },
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>yredu</th>\n",
+       "      <th>capgain</th>\n",
+       "      <th>caploss</th>\n",
+       "      <th>workhr</th>\n",
+       "      <th>work_ Federal-gov</th>\n",
+       "      <th>work_ Local-gov</th>\n",
+       "      <th>work_ Private</th>\n",
+       "      <th>work_ Self-emp-inc</th>\n",
+       "      <th>work_ Self-emp-not-inc</th>\n",
+       "      <th>...</th>\n",
+       "      <th>edu_ Prof-school</th>\n",
+       "      <th>edu_ Some-college</th>\n",
+       "      <th>relationship_ Husband</th>\n",
+       "      <th>relationship_ Not-in-family</th>\n",
+       "      <th>relationship_ Other-relative</th>\n",
+       "      <th>relationship_ Own-child</th>\n",
+       "      <th>relationship_ Unmarried</th>\n",
+       "      <th>relationship_ Wife</th>\n",
+       "      <th>sex_ Female</th>\n",
+       "      <th>sex_ Male</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>39</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2174</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>50</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>38</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3 rows × 57 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   age  yredu  capgain  caploss  workhr  work_ Federal-gov  work_ Local-gov  \\\n",
+       "0   39     13     2174        0      40                  0                0   \n",
+       "1   50     13        0        0      13                  0                0   \n",
+       "2   38      9        0        0      40                  0                0   \n",
+       "\n",
+       "   work_ Private  work_ Self-emp-inc  work_ Self-emp-not-inc  ...  \\\n",
+       "0              0                   0                       0  ...   \n",
+       "1              0                   0                       1  ...   \n",
+       "2              1                   0                       0  ...   \n",
+       "\n",
+       "   edu_ Prof-school  edu_ Some-college  relationship_ Husband  \\\n",
+       "0                 0                  0                      0   \n",
+       "1                 0                  0                      1   \n",
+       "2                 0                  0                      0   \n",
+       "\n",
+       "   relationship_ Not-in-family  relationship_ Other-relative  \\\n",
+       "0                            1                             0   \n",
+       "1                            0                             0   \n",
+       "2                            1                             0   \n",
+       "\n",
+       "   relationship_ Own-child  relationship_ Unmarried  relationship_ Wife  \\\n",
+       "0                        0                        0                   0   \n",
+       "1                        0                        0                   0   \n",
+       "2                        0                        0                   0   \n",
+       "\n",
+       "   sex_ Female  sex_ Male  \n",
+       "0            0          1  \n",
+       "1            0          1  \n",
+       "2            0          1  \n",
+       "\n",
+       "[3 rows x 57 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data[:3]"
    ]
@@ -800,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -810,8 +1013,22 @@
      "outputs_hidden": true
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(30718, 57)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape \n",
+    "# 57 features: One hot encoding expanded on the features selected to create a column for every possible value of each feature, allowing us to set the column value to 0 or 1 depending on the record."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -841,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -851,14 +1068,38 @@
      "outputs_hidden": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3.9000e+01, 1.3000e+01, 2.1740e+03, ..., 0.0000e+00, 0.0000e+00,\n",
+       "        1.0000e+00],\n",
+       "       [5.0000e+01, 1.3000e+01, 0.0000e+00, ..., 0.0000e+00, 0.0000e+00,\n",
+       "        1.0000e+00],\n",
+       "       [3.8000e+01, 9.0000e+00, 0.0000e+00, ..., 0.0000e+00, 0.0000e+00,\n",
+       "        1.0000e+00],\n",
+       "       ...,\n",
+       "       [5.8000e+01, 9.0000e+00, 0.0000e+00, ..., 0.0000e+00, 1.0000e+00,\n",
+       "        0.0000e+00],\n",
+       "       [2.2000e+01, 9.0000e+00, 0.0000e+00, ..., 0.0000e+00, 0.0000e+00,\n",
+       "        1.0000e+00],\n",
+       "       [5.2000e+01, 9.0000e+00, 1.5024e+04, ..., 1.0000e+00, 1.0000e+00,\n",
+       "        0.0000e+00]], dtype=float32)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "datanp = data.values.astype(np.float32)"
+    "datanp = data.values.astype(np.float32)\n",
+    "datanp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -871,7 +1112,8 @@
    "outputs": [],
    "source": [
     "cat_index = {}  # Mapping of feature -> start index of feature in a record\n",
-    "cat_values = {} # Mapping of feature -> list of categorical values the feature can take\n",
+    "cat_values = {} # Mapping of feature -> list of categorical values the feature can take (from one hot encoding, we have all the values for the feature as seperate columns. Can store dictionary of feature\n",
+    "                # and it's possible values prior to the encoding)\n",
     "\n",
     "# build up the cat_index and cat_values dictionary\n",
     "for i, header in enumerate(data.keys()):\n",
@@ -916,14 +1158,14 @@
     "    >>> get_categorical_value(np.array([0.1, 0., 1.1, 0.2, 0., 1., 0.]), \"work\")\n",
     "    'Private'\n",
     "    \"\"\"\n",
-    "    # <----- TODO: WRITE YOUR CODE HERE ----->\n",
-    "    # You may find the variables `cat_index` and `cat_values` \n",
-    "    # (created above) useful."
+    "    max_val_ind = np.argmax(onehot)\n",
+    "    max_feature = cat_values[feature][max_val_ind]\n",
+    "    return max_feature\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -968,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -982,9 +1224,48 @@
    "source": [
     "# set the numpy seed for reproducibility\n",
     "# https://docs.scipy.org/doc/numpy/reference/generated/numpy.random.seed.html\n",
+    "from torch.utils.data.sampler import SubsetRandomSampler\n",
     "np.random.seed(50)\n",
     "\n",
-    "# todo"
+    "data_size = len(datanp)\n",
+    "batch_size = 32\n",
+    "\n",
+    "# Create train, validation, test samplers - sets of random indices from the dataset (70% train, 15% validation, 15% test) that are provided to a sampler function when loading the data into the data object\n",
+    "# based on batch size and the provided data tensor\n",
+    "data_inds = np.arange(0,data_size)\n",
+    "np.random.shuffle(data_inds)\n",
+    "split = int(data_size*0.7)\n",
+    "split2 = int((data_size-split)/2)\n",
+    "train_sampler = SubsetRandomSampler(data_inds[:split])\n",
+    "val_sampler = SubsetRandomSampler(data_inds[split:(split+split2)])\n",
+    "test_sampler = SubsetRandomSampler(data_inds[(split+split2):])\n",
+    "# Convert numpy data to torch tensor for inputs to loaders\n",
+    "data_torch = torch.from_numpy(datanp)\n",
+    "train_loader = torch.utils.data.DataLoader(data_torch, batch_size=batch_size, num_workers=1, sampler=train_sampler)\n",
+    "val_loader = torch.utils.data.DataLoader(data_torch, batch_size=batch_size, num_workers=1, sampler=val_sampler)\n",
+    "test_loader = torch.utils.data.DataLoader(data_torch, batch_size=batch_size, num_workers=1, sampler=test_sampler)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "672\n",
+      "144\n",
+      "144\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Note that the sizes given here are based on a batch size of 32. With a batch size of one, training = 21502 records, validation = 4608 records, test = 4608 records\n",
+    "print(len(train_loader))\n",
+    "print(len(val_loader))\n",
+    "print(len(test_loader))"
    ]
   },
   {
